--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Hate Measure</title>
+	<title>Face3PO</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 </head>
 <style>
@@ -18,9 +18,11 @@
 	<div class="form-group">
 	<div class="col-md-4"></div>
 	<div class="col-md-4">
-		<form action="measure">
-			<textarea class="form-control" name="input" type="text" rows="4"></textarea>
-			<input type="hidden" name="input" value={{input}}>
+		<form action="like">
+			Friend's Username:
+			<input class="form-control" name="username" type="text" rows="4">
+			<input type="hidden" name="username" value={{username}}>
+
 			<br><button type="submit" class="btn btn-default">Go</button>
 		</form>
 
