--- a/views/like.html
+++ b/views/like.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Hate Measure</title>
+	<title>Face3PO</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -19,7 +19,6 @@
 			<div class="navbar-right" id="back"><a href="/"><button type="button" class="btn btn-default">Back</button></a></div>
 		</div>
 	</nav>
-	Hey
-    {{input}}
+    {{username}} has {{numposts}} posts you can spam.
 </body>
 </html>
